force-app/main/default/objects/Account_Salary__c/Account_Salary__c.object-meta.xml
<CustomObject>
    <label>Account Salary</label>
    <nameField>
        <label>Account Salary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Salary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>