force-app/main/default/objects/Account_Salary__c/fields/Max_Salary__c.field-meta.xml
<CustomField>
    <fullName>Max_Salary__c</fullName>
    <formula>Account__r.Max_Salary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>