force-app/main/default/objects/Account_Salary__c/fields/Total_Salary__c.field-meta.xml
<CustomField>
    <fullName>Total_Salary__c</fullName>
    <formula>Account__r.Total_Salary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>