force-app/main/default/objects/Account_Salary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Salary__c</columns>
    <columns>Total_Salary__c</columns>
    <columns>Max_Salary__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>